# karpov-test

./: .gitignore  README.md  combiner.py  makefile  pyproject.toml  requirements.txt  run_app.sh  step5_streamlit_service.py
.devcontainer/: devcontainer.json
data/: documents.json  full_texts.json  index.faiss  summaries.json
prompts/: summarize_prompt.txt  user_prompt_template.txt
steps/: step1_get_pages.py  step2_summarize.py  step3_create_index.py  step4_retrieval.py  step5_streamlit_service.py
tests/: test_step1_get_pages.py  test_step2_summarize.py  test_step3_create_index.py  test_step4_retrieval.py
